# algorithmic-pricing-continuation

./: .gitignore  CITATION.cff  EXPERIMENT_REGISTRY.csv  LICENSE  README.md  calvano_market.py  calvano_qlearning.py  pyproject.toml  run_calvano_replication.py  setup.py
neural/: __init__.py  functional_policies.py  losses.py  observations.py  reservoir.py  rollout.py
paper_preprint/: LICENSE-paper.txt  main.tex
scripts/: analyze_mature_qtable_heterogeneity.py  build_paper_figures.py  compute_binned_trajectory_welfare.py  reproduce_tables.py
src/: bindings.cpp  market.cpp
tests/: test_binned_trajectory_welfare.py  test_calvano_market_cpp.py  test_calvano_regression_ranges.py  test_calvano_replication.py  test_deng_frozen_mature_analysis.py  test_dqn_oracle_vs_qvictim.py  test_experiment_matrix.py  test_experiment_registry.py  test_full_calvano_replication.py  test_harvest_imitation.py  test_harvest_imitation_gate.py  test_harvest_imitation_integration.py  test_history_perturbation.py  test_jepa_qdecoder.py  test_mature_q_vs_q_checkpoint_10m.py  test_mature_victim.py  test_mature_victim_10m_1m_mechanism_audit.py  test_mature_victim_10m_1m_runner.py  test_mature_victim_10m_runner.py  test_mature_victim_1m_runner.py  test_mature_victim_3m_1m_followup.py  test_mature_victim_evaluator.py  test_mature_victim_maturity_sweep.py  test_neural_rollout.py  test_pc_architecture_100k_runner.py  test_representation_diagnostics.py  test_reproducibility.py  test_reservoir_oracle_experiment.py  test_rollout_lola_parity.py  test_tabular_heterogeneity.py  test_training_checkpoint.py
(+100 files in other folders)
